// Copyright 2021 Prysmatic Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package ethereum.eth.v1alpha1;

import "proto/eth/ext/options.proto";
import "proto/prysm/v1alpha1/beacon_block.proto";

import "google/api/annotations.proto";

option csharp_namespace = "Ethereum.Eth.V1alpha1";
option go_package = "github.com/prysmaticlabs/prysm/v4/proto/prysm/v1alpha1;eth";
option java_multiple_files = true;
option java_outer_classname = "SlasherProto";
option java_package = "org.ethereum.eth.v1alpha1";
option php_namespace = "Ethereum\\Eth\\v1alpha1";

// Slasher service API
//
// Slasher service provides an interface for checking if attestations or blocks
// are slashable.
service Slasher {
  // Returns any found attester slashings for an input indexed attestation.
  rpc IsSlashableAttestation(ethereum.eth.v1alpha1.IndexedAttestation)
      returns (AttesterSlashingResponse) {
    option (google.api.http) = {
      post : "/eth/v1alpha1/slasher/attestations/slashable",
      body : "*"
    };
  }

  // Returns any found proposer slashings for an input signed block header.
  rpc IsSlashableBlock(ethereum.eth.v1alpha1.SignedBeaconBlockHeader)
      returns (ProposerSlashingResponse) {
    option (google.api.http) = {
      get : "/eth/v1alpha1/slasher/blocks/slashable"
    };
  }

  // Returns the highest source and target attestation for validator indices
  // that have been observed by slasher.
  rpc HighestAttestations(HighestAttestationRequest)
      returns (HighestAttestationResponse) {
    option (google.api.http) = {
      get : "/eth/v1alpha1/slasher/attestations/highest"
    };
  }
}

message AttesterSlashingResponse {
  repeated ethereum.eth.v1alpha1.AttesterSlashing attester_slashings = 1;
}

message ProposerSlashingResponse {
  repeated ethereum.eth.v1alpha1.ProposerSlashing proposer_slashings = 1;
}

message HighestAttestationRequest { repeated uint64 validator_indices = 1; }

message HighestAttestationResponse {
  repeated HighestAttestation attestations = 1;
}

message HighestAttestation {
  uint64 validator_index = 1;
  uint64 highest_source_epoch = 2
      [ (ethereum.eth.ext.cast_type) =
            "github.com/prysmaticlabs/prysm/v4/consensus-types/primitives.Epoch" ];
  uint64 highest_target_epoch = 3
      [ (ethereum.eth.ext.cast_type) =
            "github.com/prysmaticlabs/prysm/v4/consensus-types/primitives.Epoch" ];
}
